--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LISTÁK</title>
+</head>
+<body>
+    kedvenc tevékenységeim:
+    <ul>
+        <li>biciklizés</li>
+        <li>játék</li>
+        <li>edzés</li>
+    </ul>
+    kedvenc tantárgyaim:
+    <ul>
+        <li>tesi</li>
+        <li>IKT projekt munka</li>
+        <li>osztályfőnöki  =)</li>
+    </ul>
+</body>
+</html>
