--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <a href="https://solteszb.github.io/IKT-h-zi-feladat-bemutatkoz-s/">FŐOLDAL</a>
+    :<a href="https://solteszb.github.io/list-k-index.html/">LISTÁK</a>
     <title>LISTÁK</title>
 </head>
 <body>
